[tool.poetry]
name = "huginn-hears"
version = "0.1.0"
description = "Transcribe speech and summerize in Norwegian"
authors = ["Magnus <97634880+MagnusS0@users.noreply.github.com>"]
readme = "README.md"
license = "Appache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
transformers = "^4.38.2"
langchain = "^0.1.10"
llama-cpp-python = "^0.2.55"
faster-whisper = "^1.0.1"
streamlit = "^1.32.2"
bert-extractive-summarizer = "^0.10.1"
llmlingua = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
